[gd_scene load_steps=40 format=3 uid="uid://pbgfphisbnva"]

[ext_resource type="Script" path="res://scenes/entities/player/Player.gd" id="1_5jc4u"]
[ext_resource type="Texture2D" uid="uid://dvn1nxytyfj7c" path="res://assets/player/PlayerSheetJuly24.png" id="2_aty5o"]
[ext_resource type="PackedScene" uid="uid://cicy1oxqu8qll" path="res://scenes/entities/player/JUMP.tscn" id="3_qxsd6"]
[ext_resource type="Script" path="res://scenes/entities/player/STATES.gd" id="3_tsau4"]
[ext_resource type="PackedScene" uid="uid://fgu6pqitahmu" path="res://scenes/entities/player/IDLE.tscn" id="4_1wwnh"]
[ext_resource type="PackedScene" uid="uid://c8jlmtm4vskkr" path="res://scenes/entities/player/MOVE.tscn" id="5_yne2w"]
[ext_resource type="PackedScene" uid="uid://dbt8rn6n0th8w" path="res://scenes/entities/player/FALL.tscn" id="7_lh8u6"]
[ext_resource type="PackedScene" uid="uid://c87ieq1e0rmdv" path="res://scenes/entities/player/DASH.tscn" id="8_r8y6p"]
[ext_resource type="PackedScene" uid="uid://db2qsmecwrg3x" path="res://scenes/entities/player/SLIDE.tscn" id="9_8c52p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kyyt"]
size = Vector2(16, 30)

[sub_resource type="Animation" id="Animation_2vhf1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_h3574"]
resource_name = "respawn"
length = 0.5
step = 0.05

[sub_resource type="Animation" id="Animation_6si3n"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_1njqn"]
resource_name = "lookAround"
length = 1.65
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_jgc1i"]
resource_name = "idle"
length = 1.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_fqsea"]
resource_name = "potionEquip"
length = 1.2
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_tmecq"]
resource_name = "push"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [40, 41, 42]
}

[sub_resource type="Animation" id="Animation_uahk3"]
resource_name = "jump"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [53, 54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_cepck"]
resource_name = "fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [60, 61, 62]
}

[sub_resource type="Animation" id="Animation_cbwow"]
resource_name = "death"
length = 1.5
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [118, 119, 120, 121, 122, 123, 124, 125, 126]
}

[sub_resource type="Animation" id="Animation_2mr3x"]
resource_name = "throw"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [79, 80, 81, 82, 83, 84, 85]
}

[sub_resource type="Animation" id="Animation_ya8ia"]
resource_name = "potionCraft"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jchmi"]
_data = {
"RESET": SubResource("Animation_2vhf1"),
"death": SubResource("Animation_cbwow"),
"fall": SubResource("Animation_cepck"),
"idle": SubResource("Animation_jgc1i"),
"jump": SubResource("Animation_uahk3"),
"lookAround": SubResource("Animation_1njqn"),
"potionCraft": SubResource("Animation_ya8ia"),
"potionEquip": SubResource("Animation_fqsea"),
"push": SubResource("Animation_tmecq"),
"respawn": SubResource("Animation_h3574"),
"run": SubResource("Animation_6si3n"),
"throw": SubResource("Animation_2mr3x")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tk1mj"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v4mf6"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6cedl"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_41qvh"]
animation = &"respawn"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4xqfb"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_47qey"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bw7lu"]
xfade_time = 0.01
advance_mode = 2
advance_condition = &"is_running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fxgf3"]
xfade_time = 0.01
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_62wcy"]
advance_mode = 2
advance_condition = &"is_respawning"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y2uql"]
advance_mode = 2
advance_condition = &"is_respawning"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gn0js"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ilwtg"]
advance_mode = 2
advance_condition = &"is_jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_akyst"]
advance_mode = 2
advance_condition = &"is_jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fdnik"]
advance_mode = 2
advance_condition = &"is_falling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n4stb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1o03s"]
states/fall/node = SubResource("AnimationNodeAnimation_tk1mj")
states/fall/position = Vector2(284, 208)
states/idle/node = SubResource("AnimationNodeAnimation_v4mf6")
states/idle/position = Vector2(443, 100)
states/jump/node = SubResource("AnimationNodeAnimation_6cedl")
states/jump/position = Vector2(394, 208)
states/respawn/node = SubResource("AnimationNodeAnimation_41qvh")
states/respawn/position = Vector2(618, 239)
states/run/node = SubResource("AnimationNodeAnimation_4xqfb")
states/run/position = Vector2(756, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_47qey"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_bw7lu"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_fxgf3"), "idle", "respawn", SubResource("AnimationNodeStateMachineTransition_62wcy"), "run", "respawn", SubResource("AnimationNodeStateMachineTransition_y2uql"), "respawn", "idle", SubResource("AnimationNodeStateMachineTransition_gn0js"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_ilwtg"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_akyst"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_fdnik"), "fall", "idle", SubResource("AnimationNodeStateMachineTransition_n4stb")]
graph_offset = Vector2(52, 27.4635)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
collision_mask = 18
script = ExtResource("1_5jc4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_5kyyt")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 3
texture = ExtResource("2_aty5o")
hframes = 13
vframes = 10
frame = 13

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="STATES" type="Node" parent="."]
script = ExtResource("3_tsau4")

[node name="IDLE" parent="STATES" instance=ExtResource("4_1wwnh")]

[node name="MOVE" parent="STATES" instance=ExtResource("5_yne2w")]

[node name="JUMP" parent="STATES" instance=ExtResource("3_qxsd6")]

[node name="FALL" parent="STATES" instance=ExtResource("7_lh8u6")]

[node name="DASH" parent="STATES" instance=ExtResource("8_r8y6p")]

[node name="SLIDE" parent="STATES" instance=ExtResource("9_8c52p")]

[node name="Raycasts" type="Node2D" parent="."]

[node name="TopRight" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, -13)
target_position = Vector2(9, 0)
collision_mask = 8

[node name="BottomRight" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, 16)
target_position = Vector2(9, 0)
collision_mask = 8

[node name="TopLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, -13)
target_position = Vector2(-9, 0)
collision_mask = 8

[node name="BottomLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, 16)
target_position = Vector2(-9, 0)
collision_mask = 8

[node name="ToFloor" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, 7)
target_position = Vector2(0, 30)
collision_mask = 0

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.13
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jchmi")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1o03s")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/conditions/is_falling = false
parameters/conditions/is_idle = false
parameters/conditions/is_jumping = false
parameters/conditions/is_respawning = false
parameters/conditions/is_running = false

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
